--- a/lib/config.json
+++ b/lib/config.json
@@ -2,8 +2,7 @@
   "coverageFile": {
       "type": "string",
       "title": "Coverage File",
-      "description": "Set Coverage File in Project Folder.
-      **Require Format: json-summary**",
+      "description": "Set Coverage File in Project Folder. **Require Format: json-summary**",
       "default": "C:\\Windows\\Web\\Wallpaper\\Windows\\img0.jpg"
   },
   "size": {
